B-F Sandbox Full-Backup/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ABK__c</fullName>
        <description>Infowelders</description>
        <label>ABK</label>
        <picklist>
            <picklistValues>
                <fullName>111 – SBW Gross &gt; 5000qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>112 – VM Gross 1500 – 5000qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>113  –VM klein  800 – 1500 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>114 – SM 400 – 800 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>115 – SM &lt; 400 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>121 – LEH GH Laeger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>131 – Dicounter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>141 – K&amp;W &gt; 5000 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>142 – K&amp;W 1500 -  5000 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>143 – K&amp;W 800 – 1500 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>144 – K&amp;W 400 – 800 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>145 – K&amp;W &lt; 400 qm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>199 – LEH Zentrale/Verwaltung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>211 – Facheinzelhandel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>221 – Fachgrosshandel mit Spirituosen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>222 – Fachgrosshandelslager ohne Spirituosen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>301 – Gastro Grosshandel Deutsch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>302 – Gastrogrosshandel Italienisch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>303 – Gastrogrosshandel International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>304 – Zwischengrosshandel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>306 – Inaktiv Gastro Grosshandel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>322 – Restaurants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>323 – Cafe/Bisto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>324 – Erlebnis/Kommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>325 – Szene</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>326 – Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>335 – Top Clients (B2B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>341 – Grossraumdiskothek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>343 – Clubdiskothek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>344 – Sonstige Diskothek</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AC_Nielsen_Region_Code__c</fullName>
        <description>Infowelders</description>
        <label>AC Nielsen Region Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AC_Nielsen_Region__c</fullName>
        <description>Infowelders</description>
        <label>AC Nielsen Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Licence_Number__c</fullName>
        <description>In Australia, this is the accounts liquor licence number.</description>
        <label>Account Licence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Licence_Type__c</fullName>
        <description>Accounts Trade Category</description>
        <label>Account Licence Type</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Australia Market Sub Group</description>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Duty Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sth Pacific Isl</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounting_by_Kontor__c</fullName>
        <label>Accounting by Kontor</label>
        <picklist>
            <picklistValues>
                <fullName>GES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>direct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Account__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Account</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agg_shares_of_5_shareholders_in_family__c</fullName>
        <description>FDC-PLFC</description>
        <label>Agg shares of 5% shareholders in family</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement_for_Logistics__c</fullName>
        <description>Infowelders</description>
        <label>Announcement for Logistics</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anual_Sales_Talk__c</fullName>
        <inlineHelpText>...only choose yes if annual sales talk is closed and signed by customer!</inlineHelpText>
        <label>Anual Sales Talk</label>
        <picklist>
            <picklistValues>
                <fullName>yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>no</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not relevant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_Suburb_TD__c</fullName>
        <description>Area/Suburb</description>
        <label>Area/Suburb</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>INFOWELDERS</description>
        <label>Area</label>
        <picklist>
            <controllingField>City__c</controllingField>
            <picklistValues>
                <fullName>Akasaka/Nagatacho/Toranomon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amagasaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anshan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asagiri/Kawagoe/Higashi Matsuyama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baoji</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baotao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beijing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benxi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKK Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKK North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BKK South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changchun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changsha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chengdu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chenzhou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiang Mai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiayi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiba/Makuhari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chonburi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chongqing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chungcheong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chungli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dalian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dandong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi south</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assortment_whse__c</fullName>
        <description>Assortment</description>
        <label>Assortment</label>
        <picklist>
            <picklistValues>
                <fullName>hoch [Vollsortimenter - Breite &amp; Tiefe]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mittel [Breite und/oder Tiefe - ausbaufähig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gering [Grundsortiment - nicht ausbaufähig]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Lift__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Infowelders</description>
        <label>Auto Lift?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_3m_Volume__c</fullName>
        <description>FDC-PLFC</description>
        <label>Average 3m Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Spending__c</fullName>
        <description>INFOWELDERS</description>
        <label>Average Spending</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Tenure_of_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label>Average Tenure of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_age_of_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label>Average age of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BF_Brand_Fit_whse__c</fullName>
        <description>BF Brand Fit</description>
        <label>BF Brand Fit</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_F_Market_Manager__c</fullName>
        <label>B-F Market Manager</label>
        <picklist>
            <picklistValues>
                <fullName>667D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>668D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>671D US SHIP CHANDLERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>674D DF Shoppes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>675D – No. Border</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>675D – So. Border</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aaron Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adilson Prado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adilson Prado – Brazil Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ales Logar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Pacific Territory 23: Taro Sakamoto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Pacific Territory 27: Taro Sakamoto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbara Pinna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biba Koniecna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bruce Losee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budiman – Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charlotte Ashburner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chidchanok Samolkiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China – Alex Cheung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chuck Shive – Australia Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia Slovenia Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dimitar Georgiev – Country Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dirk Sass, Country Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dong II Shin – Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dubai – Tony McIver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duty Free Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>European Territory 04: Yiannis Pafilis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Banner_Group__c</fullName>
        <description>Account Customer Group</description>
        <label>Banner Group</label>
        <picklist>
            <picklistValues>
                <fullName>1ST CHOICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 STAR CELLARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9-11 GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A.L.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCOR HOTELS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRLINES/AIRPOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AJC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBION PARK CEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALH GROUP LTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALL SEASONS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALM GOLD CLUBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALPHA SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMATOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANSETT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASHOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUR FOODWORKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVS CATERING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARGAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAR-GAINS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BASIX LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG BARGAIN GRP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUE HILLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONUS LIQUOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOTLEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOOZE BROS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSS GROUP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART ADV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART BUY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTTLEMART EXPR</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Banner_Sub_Group__c</fullName>
        <description>A group of accounts within a banner group.</description>
        <label>Banner Sub Group</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bloomberg_Ticker__c</fullName>
        <description>FDC-PLFC</description>
        <externalId>true</externalId>
        <inlineHelpText>Bloomberg-specific ticker used for daily data feeds</inlineHelpText>
        <label>Bloomberg Ticker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Board_Number_of_Directors__c</fullName>
        <description>FDC-PLFC</description>
        <label>Board: Number of Directors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brand_Focus__c</fullName>
        <description>The Field &quot;Brand Focus&quot; contains information to classify  On Trade outlets for sales and marketing purposes!</description>
        <label>Brand Focus</label>
        <picklist>
            <picklistValues>
                <fullName>CH Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EJ Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Lime Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FV Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GJ Aktivierungsoutlet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absolute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacardi Breezer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baileys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ballantine&apos;s Finest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEL ARBOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bombay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONTERRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian Mist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chivas Regal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dewars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Times</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Times Brown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Times Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Jimador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET KY Bluegrass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finlandia Vodka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gentleman Jack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glenfiddich</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herradura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iichiko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IW Harper</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <description>FDC-GD</description>
        <label>Brands</label>
        <picklist>
            <picklistValues>
                <fullName>5 Rivers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonterra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambord</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Eduardo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>El Jimador</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ETY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F1870</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fetzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Herradura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JDMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JDSB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JD-range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korbel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Little Black Dress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonoma-Cutrer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CEO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC</description>
        <inlineHelpText>Chief Executive Officer</inlineHelpText>
        <label>CEO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (CEO)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CEO_and_COB_split__c</fullName>
        <description>FDC-PLFC</description>
        <label>CEO and COB split?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CEO_family_member__c</fullName>
        <description>FDC-PLFC</description>
        <formula>IF( CEO__r.Is_Family__c , &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>If the CEO is a member of the controlling family, this will display &quot;Yes&quot;</inlineHelpText>
        <label>CEO family member?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC</description>
        <inlineHelpText>Chief Financial Officer</inlineHelpText>
        <label>CFO</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (CFO)</relationshipLabel>
        <relationshipName>AccountsCFO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CIN_POS__c</fullName>
        <description>FDC-GD</description>
        <inlineHelpText>Enter CIN/POS</inlineHelpText>
        <label>CIN/POS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIN_PROD__c</fullName>
        <description>FDC-GD</description>
        <label>CIN/PROD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB_Independent_Director__c</fullName>
        <description>FDC-PLFC</description>
        <formula>IF(COB__r.Is_Independent__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COB Independent Director?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FDC-PLFC</description>
        <inlineHelpText>Chairman of the Board</inlineHelpText>
        <label>COB</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (COB)</relationshipLabel>
        <relationshipName>AccountsCOB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>COB_family_member__c</fullName>
        <description>FDC-PLFC</description>
        <formula>IF(COB__r.Is_Family__c,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the COB is a member of the controlling family, this will display &quot;Yes&quot;</inlineHelpText>
        <label>COB family member?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>INFOWELDERS</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>